--- a/authenticator/authenticator-api/src/main/resources/sonar-project.properties
+++ b/authenticator/authenticator-api/src/main/resources/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
-sonar.projectKey=sonar-argonot-authentificator
-sonar.projectName=Argonot Authentificator Sonar Analysis
+sonar.projectKey=sonar-argonot-authenticator
+sonar.projectName=Argonot Authenticator Sonar Analysis
 sonar.projectVersion=1.0
  
 # Comma-separated paths to directories with sources (required)
