--- a/authenticator/authenticator-api/pom.xml
+++ b/authenticator/authenticator-api/pom.xml
@@ -85,5 +85,9 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
 	</dependencies>
 </project>
