--- a/authenticator/authenticator-api/src/main/webapp/WEB-INF/web.xml
+++ b/authenticator/authenticator-api/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,10 @@
 	</listener>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/applicationContext.xml</param-value>
+		<param-value>
+			/WEB-INF/applicationContext.xml
+			/WEB-INF/securityContext.xml
+		</param-value>
 	</context-param>
 	<session-config>
 		<session-timeout>-1</session-timeout>
@@ -49,6 +52,15 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 </web-app>
