--- a/authenticator/pom.xml
+++ b/authenticator/pom.xml
@@ -176,6 +176,17 @@
 				<artifactId>spring-jdbc</artifactId>
 				<version>${spring.framework.version}</version>
 			</dependency>
+			<!-- Spring Security -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
 			<!-- DOZER -->
 			<dependency>
 				<groupId>net.sf.dozer</groupId>
@@ -200,6 +211,11 @@
 				<artifactId>javax.servlet-api</artifactId>
 				<version>3.0.1</version>
 				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>jstl</groupId>
+				<artifactId>jstl</artifactId>
+				<version>1.2</version>
 			</dependency>
 			<!-- PROJECT DEPENDENCIES -->
 			<dependency>
