--- a/authenticator/authenticator-business/pom.xml
+++ b/authenticator/authenticator-business/pom.xml
@@ -115,5 +115,10 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.8</version>
 		</dependency>
+		<!-- JACKSON -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 </project>
