Business now notify errors with boolean and message instead of null object.

--- a/authenticator/authenticator-business/pom.xml
+++ b/authenticator/authenticator-business/pom.xml
@@ -105,6 +105,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 		</dependency>
+		<!-- DOZER -->
+		<dependency>
+			<groupId>net.sf.dozer</groupId>
+			<artifactId>dozer</artifactId>
+		</dependency>
 		<!-- CRYPTO -->
 		<dependency>
 			<groupId>commons-codec</groupId>
