MAJ maven release plugin

--- a/authenticator/pom.xml
+++ b/authenticator/pom.xml
@@ -24,7 +24,9 @@
 		<jackson.mapper.version>1.9.13</jackson.mapper.version>
 		<json.documentation.version>1.1.16</json.documentation.version>
 		<dozer.version>5.3.1</dozer.version>
+		<jacoco.version>0.7.4.201502262128</jacoco.version>
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
+		<maven.release.plugin>2.5.1</maven.release.plugin>
 		<argonot.commons.version>0.0.9-SNAPSHOT</argonot.commons.version>
 	</properties>
 
@@ -56,6 +58,30 @@
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>${maven.release.plugin}</version>
 			</plugin>
 		</plugins>
 	</build>
