--- a/authenticator/pom.xml
+++ b/authenticator/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.argonot</groupId>
 	<artifactId>authenticator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>pom</packaging>
 	<name>Authenticator Argonot</name>
 	<description>Provide authentication and role management for Argonot users</description>
@@ -45,7 +44,7 @@
 		<connection>scm:git:https://github.com/mairouche/Authenticator.git</connection>
 		<developerConnection>scm:git:git@github.com:mairouche/Authenticator.git</developerConnection>
 		<url>https://github.com/mairouche/Authenticator</url>
-		<tag>HEAD</tag>
+		<tag>authenticator-0.0.1</tag>
 	</scm>
 
 	<build>
