--- a/authenticator/authenticator-business/pom.xml
+++ b/authenticator/authenticator-business/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.argonot</groupId>
 		<artifactId>authenticator</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>authenticator-business</artifactId>
 	<name>Argonot Authenticator Business Service</name>
