--- a/authenticator/pom.xml
+++ b/authenticator/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.argonot</groupId>
 	<artifactId>authenticator</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Authenticator Argonot</name>
 	<description>Provide authentication and role management for Argonot users</description>
@@ -44,7 +44,7 @@
 		<connection>scm:git:https://github.com/mairouche/Authenticator.git</connection>
 		<developerConnection>scm:git:git@github.com:mairouche/Authenticator.git</developerConnection>
 		<url>https://github.com/mairouche/Authenticator</url>
-		<tag>authenticator-0.0.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<build>
