--- a/authenticator/pom.xml
+++ b/authenticator/pom.xml
@@ -39,6 +39,21 @@
 			</roles>
 		</developer>
 	</developers>
+	
+	<distributionManagement>
+		<!-- use the following if you're not using a snapshot version. -->
+		<repository>
+			<id>argonot-release</id>
+			<name>Argonot Release Repository</name>
+			<url>http://62.210.36.105:8082/repository/argonot-release</url>
+		</repository>
+		<!-- use the following if you ARE using a snapshot version. -->
+		<snapshotRepository>
+			<id>argonot-snapshot</id>
+			<name>Argonot Snapshot Repository</name>
+			<url>http://62.210.36.105:8082/repository/argonot-snapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<scm>
 		<connection>scm:git:https://github.com/mairouche/Authenticator.git</connection>
