--- a/authenticator/authenticator-api/pom.xml
+++ b/authenticator/authenticator-api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.argonot</groupId>
 		<artifactId>authenticator</artifactId>
-		<version>0.0.3</version>
+		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>authenticator-api</artifactId>
 	<packaging>war</packaging>
