--- a/authenticator/authenticator-api/src/main/resources/config.properties
+++ b/authenticator/authenticator-api/src/main/resources/config.properties
@@ -1,2 +1,2 @@
-avatar.upload.folder=/var/www/int/ideebox/avatars/
-avatar.upload.url=https://argonot.org/int/ideebox/avatars/
+avatar.upload.folder=/var/www/forge/
+avatar.upload.url=http://forge.argonot.org/
