--- a/authenticator/pom.xml
+++ b/authenticator/pom.xml
@@ -26,7 +26,7 @@
 		<jacoco.version>0.7.4.201502262128</jacoco.version>
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
 		<maven.release.plugin>2.5.1</maven.release.plugin>
-		<argonot.commons.version>0.0.9-SNAPSHOT</argonot.commons.version>
+		<argonot.commons.version>0.0.8</argonot.commons.version>
 	</properties>
 
 	<developers>
